force-app/main/default/objects/Subscription_Order__c/Subscription_Order__c.object-meta.xml
<CustomObject>
    <label>Subscription Order</label>
    <nameField>
        
        <displayFormat>SO-{00000}</displayFormat>
        
        <label>Subscription Order Name</label>
        
        
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>Subscription Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>