force-app/main/default/objects/Subscription_Order__c/fields/Acquisition_Type__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Type__c</fullName>
    <formula>IF (DATEVALUE( Effective_Date__c ) &gt; Utility_Account_Subscription__r.Shared_Solar_System__r.Reacquisition_Start_Date__c , &quot;Reacquisition&quot;,&quot;Acquisition&quot;)</formula>
    <inlineHelpText>Displays &quot;Reacquisition&quot; if the SO&apos;s &quot;Effective Date&quot; is after the UAS&apos;s SSS &quot;Reacquisition Start Date&quot;, otherwise it display &quot;Acquisition&quot;</inlineHelpText>
    <label>Acquisition Type</label>
    <type>Text</type>
</CustomField>