force-app/main/default/objects/Subscription_Order__c/fields/Allocation_Schedule_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Schedule_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The first allocation schedule subscription created after this subscription order. The allocation schedule may or may not be accepted and executed by the utility.</inlineHelpText>
    <label>Allocation Schedule Subscription</label>
    <referenceTo>Schedule_Z_Subscription__c</referenceTo>
    <relationshipLabel>Subscription Orders</relationshipLabel>
    <relationshipName>Subscription_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>