force-app/main/default/objects/Subscription_Order__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>Subscription Orders will not be rolled up to the utility account subscription until they are marked as approved. Once approved, they cannot be changed.</description>
    <inlineHelpText>Subscription Orders will not be rolled up to the utility account subscription until they are marked as approved. Once approved, they cannot be changed.</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Approved</fullName>
                
                
                    <label>Approved</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>