force-app/main/default/objects/Subscription_Order__c/fields/Approved_Change_in_Percent_Share__c.field-meta.xml
<CustomField>
    <fullName>Approved_Change_in_Percent_Share__c</fullName>
    <description>Stamped with &apos;Calculated Change in % Share&apos; when Approved. If type = &apos;SSS Update,&apos; stamped with value of &apos;System Change Percent Share&apos; - &apos;Previous % Share.&apos; We need a static field for tracking purposes and to use in Rollup summary fields.</description>
    <inlineHelpText>Stamped with &apos;Calculated Change in % Share&apos; when Approved. If type = &apos;SSS Update,&apos; stamped with value of &apos;System Change Percent Share&apos; - &apos;Previous % Share.&apos; We need a static field for tracking purposes and to use in Rollup summary fields.</inlineHelpText>
    <label>Approved Change in Percent Share</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>