force-app/main/default/objects/Subscription_Order__c/fields/Approved_Change_in_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Approved_Change_in_Subscription__c</fullName>
    <description>This is the rounded net change in kW DC. When SO is approved, field is stamped with &apos;Calculated Change in Subscription kW DC.&apos; If Type = &apos;SSS Update,&apos; field is stamped with value of &apos;System Change in kW Subscription&apos; - &apos;Previous kW Subscription. It&apos;s important to have a static value for tracking purposes, and to use in rollup summary fields.</description>
    <inlineHelpText>This is the rounded net change in kW DC. When SO is approved, field is stamped with &apos;Calculated Change in Subscription kW DC.&apos; If Type = &apos;SSS Update,&apos; field is stamped with value of &apos;System Change in kW Subscription&apos; - &apos;Previous kW Subscription.</inlineHelpText>
    <label>Approved Change in Subscription (KW DC)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>