force-app/main/default/objects/Subscription_Order__c/fields/Calculated_Change_in_kW_DC_Rounded__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Change_in_kW_DC_Rounded__c</fullName>
    <formula>Calculated_Change_in_Percent_Share_of_Sy__c * Total_System_Size_kW_DC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field calculates the kW DC subscription by multiplying the Share of System value by the total kw dc system size. I</inlineHelpText>
    <label>XCalculated Change in kW DC (Rounded)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>