force-app/main/default/objects/Subscription_Order__c/fields/Calculated_Change_in_Percent_Share_of_Sy__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Change_in_Percent_Share_of_Sy__c</fullName>
    <formula>ROUND( Calculated_Change_in_Subscription_KW_DC__c / Total_System_Size_kW_DC__c ,  Utility_Number_of_Decimal_Places__c  + 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XCalculated Change in % of System</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>