force-app/main/default/objects/Subscription_Order__c/fields/Calculated_Change_in_Subscription_KW_DC__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Change_in_Subscription_KW_DC__c</fullName>
    <formula>IF(

AND(TEXT( Product__r.Customer_Subscription_Type__c )=&apos;kWh&apos;, Change_in_Annual_kWh__c!=0),

Change_in_Annual_kWh__c/ Expected_Yield_kWh_kW__c ,

IF( Utility_Account_Subscription__r.UAS_Number__c &gt; 1 ,

Change_in_Annual_Cost__c / Value_of_NMC__c / Expected_Yield_kWh_kW__c,

IF(

OR( Utility_Account_Subscription__r.Auto_Unround__c = TRUE , Utility_Account_Subscription__r.UAS_Number__c = 1),

Change_in_Annual_Cost__c / Value_of_NMC__c/Expected_Yield_kWh_kW__c,


IF(

OR(Utility_Account_Subscription__r.UAS_Number__c=1, Utility_Account_Subscription__r.Shared_Solar_System__r.Name = &apos;Fairhaven Mill Rd&apos;, 

Utility_Account_Subscription__r.Shared_Solar_System__r.Name= &apos;Oxford Clara Barton&apos;),

Round(( Change_in_Annual_Cost__c / Value_of_NMC__c/Expected_Yield_kWh_kW__c) * 4, 0)/4,0))))</formula>
    <inlineHelpText>Unrounded Subscription Calculation</inlineHelpText>
    <label>XCalculated Change in Subscription KW DC</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>