force-app/main/default/objects/Subscription_Order__c/fields/Change_in_Annual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Change_in_Annual_Cost__c</fullName>
    <description>This is used for subscription orders where the related product is sized using dollars. It represents the net change from previously approved subscription orders.</description>
    <inlineHelpText>This is used for subscription orders where the related product is sized using dollars. It represents the net change from previously approved subscription orders.</inlineHelpText>
    <label>Change in Annual Cost</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>