force-app/main/default/objects/Subscription_Order__c/fields/Change_in_Annual_kWh__c.field-meta.xml
<CustomField>
    <fullName>Change_in_Annual_kWh__c</fullName>
    <description>This is used for Subscription Orders where the related product is sized in kwh. It represents the net change from previously approved subscription orders.</description>
    <inlineHelpText>This is used for Subscription Orders where the related product is sized in kwh. It represents the net change from previously approved subscription orders.</inlineHelpText>
    <label>Change in Annual kWh</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>