force-app/main/default/objects/Subscription_Order__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Client Account that was on the related Shared Solar System at the time the Subscription Order was created.</description>
    <inlineHelpText>This is the Client Account that was on the related Shared Solar System at the time the Subscription Order was created.</inlineHelpText>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscription Orders</relationshipLabel>
    <relationshipName>Subscription_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>