force-app/main/default/objects/Subscription_Order__c/fields/Client_Assignment_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Client_Assignment_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Assignment Agreement contract, populated when the Assignment Agreement on the corresponding Opportunity (or Opportunity&apos;s Contract) is populated or changed</inlineHelpText>
    <label>Client Assignment Agreement</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Subscription Orders</relationshipLabel>
    <relationshipName>Subscription_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>