force-app/main/default/objects/Subscription_Order__c/fields/Client_Invoicing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Client_Invoicing_Fee__c</fullName>
    <formula>IF(OR(Contract_Fee_Detail__r.Acquisition_Sizing_Type_Downsizing__c,
      Approved_Change_in_Subscription__c &gt; 0),
   Potential_Client_Invoicing_Fee__c,
   IF(Include_Downsizing_in_AA_Invoice__c,
      Potential_Client_Invoicing_Fee__c,
      NULL))</formula>
    <inlineHelpText>The fee (or credit) to charge the client for this Subscription Order. Can be offset by related Client Invoicing Memos.</inlineHelpText>
    <label>Client Invoicing Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>