force-app/main/default/objects/Subscription_Order__c/fields/Client_Invoicing_Fee_Override__c.field-meta.xml
<CustomField>
    <fullName>Client_Invoicing_Fee_Override__c</fullName>
    <inlineHelpText>Override to the system calculated client invoicing amount. This does not override the Client Invoicing Fee yet - we&apos;re using this field to identify fee discrepancies in historical data.</inlineHelpText>
    <label>Client Invoicing Fee Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>