force-app/main/default/objects/Subscription_Order__c/fields/Client_Invoicing_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Invoicing_Type__c</fullName>
    <formula>IF( Utility_Account_Subscription__r.Shared_Solar_System__r.Waitlist__c, &quot;Waitlist&quot;,
    IF( 
        AND(
            ISBLANK(Utility_Account_Subscription__r.Opportunity__r.Contract.Assignment_Agreement__c ),  
            ISBLANK(Client_Assignment_Agreement__c )
        )
        ||
        (AND(
            NOT(ISBLANK(Utility_Account_Subscription__r.Opportunity__r.Contract.Assignment_Agreement__c )),  
            NOT(ISBLANK(Client_Assignment_Agreement__c ))
            )
        ),
        CASE(
            TEXT(Type__c),
            &quot;Initial&quot;, &quot;Initial&quot;,
            &quot;Resize&quot;, &quot;Initial&quot;,
            &quot;Transfer&quot;,&quot;Initial&quot;,
            &quot;Shared Solar System Update&quot;,&quot;Shared Solar System Update&quot;,
            &quot;Cancellation&quot;,&quot;Cancellation&quot;,
            &quot;Error&quot;
        ),
        IF(
            AND(
                NOT(ISBLANK(Utility_Account_Subscription__r.Opportunity__r.Contract.Assignment_Agreement__c )),  
                ISBLANK(Client_Assignment_Agreement__c )
                )
            ,
            CASE(
                TEXT(Type__c),
                &quot;Initial&quot;, &quot;Resize&quot;,
                &quot;Resize&quot;, &quot;Resize&quot;,
                &quot;Transfer&quot;,&quot;Transfer&quot;,
                &quot;Shared Solar System Update&quot;,&quot;Shared Solar System Update&quot;,
                &quot;Cancellation&quot;,&quot;Cancellation&quot;,
                &quot;Error&quot;
            ),
            &quot;Error&quot;
        )
    )
)</formula>
    <inlineHelpText>How the SO is used for client invoicing. Based on the Type, Assignment Agreement and Customer Contract Assignment Agreement, and SSS Waitlist fields</inlineHelpText>
    <label>Client Invoicing Type</label>
    <type>Text</type>
</CustomField>