force-app/main/default/objects/Subscription_Order__c/fields/Contract_Close_Commission__c.field-meta.xml
<CustomField>
    <fullName>Contract_Close_Commission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contract Close Commission Payment record this Subscription Order is applied to. If no value, this Subscription Order has not been applied to a Commission Payment record yet.</inlineHelpText>
    <label>Contract Close Commission</label>
    <referenceTo>Commission_Payment__c</referenceTo>
    <relationshipLabel>Contract_Close_Subscription_Orders</relationshipLabel>
    <relationshipName>Subscription_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>