force-app/main/default/objects/Subscription_Order__c/fields/Contract_Close_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Close_Commission_Amount__c</fullName>
    <description>Actual Partner Commission due for this subscription&apos;s Contract Close</description>
    <inlineHelpText>Actual Partner Commission due for this subscription&apos;s Contract Close</inlineHelpText>
    <label>Contract Close Commission Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>