force-app/main/default/objects/Subscription_Order__c/fields/Contract_Fee_Detail__c.field-meta.xml
<CustomField>
    <fullName>Contract_Fee_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Acquisition rate charged to client for this change</inlineHelpText>
    <label>Contract Fee Detail</label>
    <referenceTo>Contract_Fee_Detail__c</referenceTo>
    <relationshipLabel>Subscription Orders</relationshipLabel>
    <relationshipName>Subscription_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>