force-app/main/default/objects/Subscription_Order__c/fields/Date_Enacted_By_Utility__c.field-meta.xml
<CustomField>
    <fullName>Date_Enacted_By_Utility__c</fullName>
    <formula>IF(
NOT(ISBLANK(Allocation_Schedule_Subscription__r.Schedule_Z__r.Date_Enacted_by_Utility__c)),
Allocation_Schedule_Subscription__r.Schedule_Z__r.Date_Enacted_by_Utility__c,
Utility_Account_Subscription__r.Date_Removed_from_Project__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Enacted By Utility</label>
    <type>Date</type>
</CustomField>