force-app/main/default/objects/Subscription_Order__c/fields/Expected_Yield_kWh_kW__c.field-meta.xml
<CustomField>
    <fullName>Expected_Yield_kWh_kW__c</fullName>
    <description>This is the Expected Yield (kWh/kW) from the related shared solar system at the time the subscription order was created.</description>
    <inlineHelpText>This is the Expected Yield (kWh/kW) from the related shared solar system at the time the subscription order was created.</inlineHelpText>
    <label>Expected Yield (kWh/kW)</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>