force-app/main/default/objects/Subscription_Order__c/fields/First_Bill_Paid_Commission__c.field-meta.xml
<CustomField>
    <fullName>First_Bill_Paid_Commission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>First Bill Paid Commission Payment record this Subscription Order is applied to. If no value, this Subscription Order has not been applied to a Commission Payment record yet.</inlineHelpText>
    <label>First Bill Paid Commission</label>
    <referenceTo>Commission_Payment__c</referenceTo>
    <relationshipLabel>Subscription Orders (First Bill Paid Commission)</relationshipLabel>
    <relationshipName>First_Bill_Paid_Subscription_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>