force-app/main/default/objects/Subscription_Order__c/fields/First_Bill_Paid_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Bill_Paid_Commission_Amount__c</fullName>
    <inlineHelpText>Actual Partner Commission due for this subscription&apos;s First Bill Paid</inlineHelpText>
    <label>First Bill Paid Commission Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>