force-app/main/default/objects/Subscription_Order__c/fields/First_Bill_Sent_Estimated_Commission__c.field-meta.xml
<CustomField>
    <fullName>First_Bill_Sent_Estimated_Commission__c</fullName>
    <formula>CASE(Utility_Account_Subscription__r.Opportunity__r.Commission_Structure__r.Type__c,
 &quot;Variable by kW&quot;, 
  Utility_Account_Subscription__r.Opportunity__r.Commission_Structure__r.Cents_kW_DC_First_Bill__c * 1000 * Approved_Change_in_Subscription__c,
 &quot;Fixed by Annual kWh&quot;,
  IF(ISPICKVAL(Type__c, &quot;Initial&quot;), 0, 0),
 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated Commission owed to partner on First Bill Sent based on Approved Change in Subscription and Commission Rate specified on deal Commission Structure</inlineHelpText>
    <label>First Bill Sent Estimated Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>