force-app/main/default/objects/Subscription_Order__c/fields/Include_Downsizing_in_AA_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Include_Downsizing_in_AA_Invoice__c</fullName>
    <formula>AND(Approved_Change_in_Subscription__c &lt; 0, NOT(ISBLANK(Client_Assignment_Agreement__c)))</formula>
    <inlineHelpText>Used to credit the client for negative subscription changes if the Subscription Order is included in an assignment agreement (opposed to after assignment when only some clients are credited for downsizing)</inlineHelpText>
    <label>Include Downsizing in AA Invoice</label>
    <type>Checkbox</type>
</CustomField>