force-app/main/default/objects/Subscription_Order__c/fields/Included_in_Contract_Close__c.field-meta.xml
<CustomField>
    <fullName>Included_in_Contract_Close__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set during Perch Countersignature flow and implemented in W-024422</description>
    <inlineHelpText>Designates if this Subscription Order has been applied to the Contract Close Commission Payment for the corresponding deal.</inlineHelpText>
    <label>Included in Contract Close</label>
    <type>Checkbox</type>
</CustomField>