force-app/main/default/objects/Subscription_Order__c/fields/NetSuite_Invoice__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Invoice__c</fullName>
    <label>NetSuite Invoice #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>