force-app/main/default/objects/Subscription_Order__c/fields/New_Annual_Cost__c.field-meta.xml
<CustomField>
    <fullName>New_Annual_Cost__c</fullName>
    <inlineHelpText>This is the new annual cost that the UAS will have once the SO is effective.</inlineHelpText>
    <label>New Annual Cost</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>