force-app/main/default/objects/Subscription_Order__c/fields/New_Annual_kWh__c.field-meta.xml
<CustomField>
    <fullName>New_Annual_kWh__c</fullName>
    <inlineHelpText>This is the new annual kwh that the UAS will have once this SO is effective.</inlineHelpText>
    <label>New Annual kWh</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>