force-app/main/default/objects/Subscription_Order__c/fields/Previous_Annual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Previous_Annual_Cost__c</fullName>
    <description>This is the Annual Cost on the UAS at the time the subscription order was created</description>
    <inlineHelpText>This is the Annual Cost on the UAS at the time the subscription order was created</inlineHelpText>
    <label>Previous Annual Cost</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>