force-app/main/default/objects/Subscription_Order__c/fields/Previous_Annual_kwh__c.field-meta.xml
<CustomField>
    <fullName>Previous_Annual_kwh__c</fullName>
    <description>This is the Annual kwh on the related UAS when the Subscription Order was created.</description>
    <inlineHelpText>This is the Annual kwh on the related UAS when the Subscription Order was created.</inlineHelpText>
    <label>Previous Annual kwh</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>