force-app/main/default/objects/Subscription_Order__c/fields/Previous_kw_DC_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Previous_kw_DC_Subscription__c</fullName>
    <description>This is the kw dc subscription on the related UAS at the time to subscription order was created.</description>
    <label>Previous kw DC Subscription</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>