force-app/main/default/objects/Subscription_Order__c/fields/Previous_Percent_Share_of_System__c.field-meta.xml
<CustomField>
    <fullName>Previous_Percent_Share_of_System__c</fullName>
    <description>This is the Percent Share of System that was on the related UAS at the time the Subscription Order was created.</description>
    <inlineHelpText>This is the Percent Share of System that was on the related UAS at the time the Subscription Order was created.</inlineHelpText>
    <label>Previous Percent Share of System</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>