force-app/main/default/objects/Subscription_Order__c/fields/Shared_Solar_System_Order__c.field-meta.xml
<CustomField>
    <fullName>Shared_Solar_System_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>This is the related Shared Solar System Order that the Subscription Order was created from.</inlineHelpText>
    <label>Shared Solar System Order</label>
    <referenceTo>Shared_Solar_System_Order__c</referenceTo>
    <relationshipLabel>Subscription Orders</relationshipLabel>
    <relationshipName>Subscription_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>