force-app/main/default/objects/Subscription_Order__c/fields/Size_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Size_Ratio__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Size Ratio from Sizing Method used to calculate subscription size</description>
    <inlineHelpText>Size Ratio from Sizing Method used to calculate subscription size</inlineHelpText>
    <label>Size Ratio</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>