force-app/main/default/objects/Subscription_Order__c/fields/System_Change_kW_DC_Rounded__c.field-meta.xml
<CustomField>
    <fullName>System_Change_kW_DC_Rounded__c</fullName>
    <formula>System_Change_Percent_Share_of_System__c  * Total_System_Size_kW_DC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This uses the System Change Percent Share of System multiplied by the Total System Size in kW DC to find the kw DC Subscription value.</inlineHelpText>
    <label>New kW DC (Rounded)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>