force-app/main/default/objects/Subscription_Order__c/fields/System_Change_Percent_Share_of_System__c.field-meta.xml
<CustomField>
    <fullName>System_Change_Percent_Share_of_System__c</fullName>
    <formula>ROUND(   System_Change_kW_DC_Subscription__c / Total_System_Size_kW_DC__c , Utility_Number_of_Decimal_Places__c + 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Percent Share of System</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>