force-app/main/default/objects/Subscription_Order__c/fields/Total_System_Size_kW_DC__c.field-meta.xml
<CustomField>
    <fullName>Total_System_Size_kW_DC__c</fullName>
    <description>This is the Total System Size kW DC on the related shared solar system at the time the subscription order was created.</description>
    <inlineHelpText>This is the Total System Size kW DC on the related shared solar system at the time the subscription order was created.</inlineHelpText>
    <label>Total System Size kW DC</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>