force-app/main/default/objects/Subscription_Order__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Transfer</fullName>
                
                
                    <label>Transfer</label>
                
                </value>
            
                <value>
                
                    <fullName>Cancellation</fullName>
                
                
                    <label>Cancellation</label>
                
                </value>
            
                <value>
                
                    <fullName>Shared Solar System Update</fullName>
                
                
                    <label>Shared Solar System Update</label>
                
                </value>
            
                <value>
                
                    <fullName>Resize</fullName>
                
                
                    <label>Resize</label>
                
                </value>
            
                <value>
                
                    <fullName>Initial</fullName>
                
                
                    <label>Initial</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>