force-app/main/default/objects/Subscription_Order__c/fields/Utility_Account_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Utility_Account_Subscription__c</fullName>
    <label>Utility Account Subscription</label>
    <referenceTo>Utility_Account_Subscription__c</referenceTo>
    <relationshipLabel>Subscription Orders</relationshipLabel>
    <relationshipName>Subscription_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>